<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding">

    <RadioGroup
        android:id="@+id/main_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_rdbtn_array_sorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/extra_small_margin"
            android:checked="true"
            android:text="@string/array_sorting" />

        <RadioButton
            android:id="@+id/main_rdbtn_magic_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_box" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_et_first_array"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:hint="Введите исходный массив А1"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_et_second_array"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:hint="Введите массив сортировки А2"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_et_magic_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_padding"
        android:hint="Введите матрицу 3х3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/main_tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="результат" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_calculation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/calculation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/main_save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_export"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/main_export" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_load"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/main_load" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_import"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/extra_small_margin"
        android:text="@string/main_import" />

</androidx.appcompat.widget.LinearLayoutCompat>